# cmake_cpp_template

./: CMakeLists.txt  readme.md
include/: my_math.h
src/: say_hello.cpp
template/example/: main.cpp
template/include/: say_hello.h
timer/: CMakeLists.txt
timer/example/: CMakeLists.txt  main.cpp
timer/src/: linux_timer.cpp  linux_timer.h  timer.cpp  timer.h
